样式：React内联样式和CSS样式的区别，Notification组件添加类型参数，添加一些通知

--- a/part2/src/index.css
+++ b/part2/src/index.css
@@ -41,3 +41,13 @@ li {
     padding: 10px;
     margin-bottom: 10px;
 }
+
+.normalMsg {
+    color: darkcyan;
+    background: lightgrey;
+    font-size: 20px;
+    border-style: solid;
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 10px;
+}
